--- a/style.css
+++ b/style.css
@@ -41,16 +41,6 @@
 
 }
 
-.front{
-  width: auto;
-  height: auto;
-  /*align-content: center;*/
-  /*border: .5px solid black;*/
-  /*border:3px solid red;*/
-  margin: 10px;
-  box-sizing: content-box;
-
-}
 
 .cover {
   height: 320px;
@@ -58,68 +48,29 @@
   margin:10px;
 }
 
-.back{
-  width: 250px;
-  height: 320px;
-  /*align-content: center;*/
-  /*display: inline-block;*/
-  white-space: normal;
-  /*word-wrap: break-word;*/
-  border: .5px solid black;
-  margin:10px;
-}
 
 
-/*Scrolling Effect*/
-
-#case0,#case1,#case2,#case3,#case4,#case5,#case6,#case7,#case8,#case9{
-  height: 340px;
-  width: 250px;
-  position: relative;
-  perspective: 800px;
-  display: inline-flex;
-}
-
-#b0,#b1,#b2,#b3,#b4,#b5,#b6,#b7,#b8,#b9 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: transform 1s;
-}
-
-#b0 div,#b1 div,#b2 div,#b3 div,#b4 div,#b5 div,#b6 div,#b7 div,#b8 div,#b9 div{
-  margin: 0 auto;
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-#b0 .front,#b1 .front,#b2 .front,#b3 .front,#b4 .front,#b5 .front,#b6 .front,#b7 .front,#b8 .front,#b9 .front {
-  /*background: red;*/
-}
-
-#b0 .back,#b1 .back,#b2 .back,#b3 .back,#b4 .back,#b5 .back,#b6 .back,#b7 .back,#b8 .back,#b9 .back {
-  transform: rotateY( -180deg );
-}
-
-#b0.flipped,#b1.flipped,#b2.flipped,#b3.flipped,#b4.flipped,#b5.flipped,#b6.flipped,#b7.flipped,#b8.flipped,#b9.flipped {
-  transform: rotateY( -180deg );
-}
 
 
 /*======example====================*/
+
+.bigbox{
+  width: 100%;
+  height: 400px;
+  display: inline-flex;
+  border: 3px solid green;
+}
 
 .container2 { 
   width: 200px;
   height: 260px;
   position: relative;
   perspective: 800px;
+  margin:10px;
+
 }
 
-#card {
+#card0, #card1, #card2, #card3, #card4 {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -127,7 +78,7 @@
   transition: transform 1s;
 }
 
-#card figure {
+#card0 figure, #card1 figure, #card2 figure, #card3 figure, #card4 figure {
   margin: 0;
   display: block;
   position: absolute;
@@ -136,15 +87,15 @@
   backface-visibility: hidden;
 }
 
-#card .front {
+#card0 .front, #card1 .front, #card2 .front, #card3 .front, #card4 .front {
   background: red;
 }
-#card .back {
+#card0 .back, #card1 .back, #card2 .back, #card3 .back, #card4 .back {
   background: blue;
   transform: rotateY( -180deg );
 }
 
-#card.flipped {
+#card0.flipped, #card1.flipped,#card2.flipped, #card3.flipped, #card4.flipped {
   transform: rotateY( -180deg );
 }
 
