--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+html {
+      scroll-behavior: smooth;
+    }
+
 
 .cover-box {
   position: relative;
-  height:600px;
+  height:700px;
   background-image: url("cover_pic.png");
   background-position: top center;
   background-repeat: no-repeat;
@@ -19,48 +23,79 @@
   overflow: hidden;
 }
 
-.cover-title {
-  width: 100%;
-  height: 100%;
-  /*background-image:url("cover_title.png");*/
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  top:50%;
+.bigbox{
+  height: 100vh;
+  position: relative;
+  background-color: #DDDEDE;
 }
 
-.bigbox{
-
+#collection_container{
+  position: relative;
 }
 
 .categoryTitle{
-  display: block;
+  display: inline-block;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 60px;
+  color: #232122;
+}
+
+#collection_title{
+  margin-top: 8%;
+  margin-bottom: 20px;
+  display: inline-block;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 60px;
+  color: #232122;
 }
 
 .contentBox1 {
-  margin-top: 50px;
-  margin-bottom: 40px;
+  height: 200px;
+  /*position: relative;*/
 }
 
 .contentBox2{
-  margin-top: 30px;
-  margin-bottom: 30px;
+  position: relative;
+}
+
+#nav{
+  position: relative;
+  left:6%;
+  margin-bottom: 10px;
+}
+
+.active{
+  background-color: #A5C05B;
+}
+
+.fa-heart{
+  position: absolute;
+  top:5%;
+  left:80%;
+  color:transparent;
+
+}
+
+.fa-heart:hover{
+  color:red;
+  transform: color 1s ease-in-out;
 }
 
 /*======example====================*/
 
 .container2 { 
-  width: 240px;
-  height: 300px;
+  width: 220px;
+  height: 260px;
   position: relative;
   perspective: 800px;
-  margin:10px;
+  margin:15px;
   display: inline-flex;
   flex-wrap: nowrap;
   overflow: scroll;
   /*opacity: 0;*/
   transform: translateX(-20px);
   transition: all 0.3s ease-in-out;
+  box-shadow: 10px 10px 5px grey;
 }
 
 .container2:hover{
@@ -73,7 +108,8 @@
 }
 
 #card0, #card1, #card2, #card3, #card4,
-#card5, #card6, #card7, #card8, #card9 {
+#card5, #card6, #card7, #card8, #card9,
+#card10, #card11 {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -82,7 +118,8 @@
 }
 
 #card0 figure, #card1 figure, #card2 figure, #card3 figure, #card4 figure,
-#card5 figure, #card6 figure, #card7 figure, #card8 figure, #card9 figure {
+#card5 figure, #card6 figure, #card7 figure, #card8 figure, #card9 figure,
+#card10 figure,#card11 figure {
   margin: 0;
   display: block;
   position: absolute;
@@ -96,14 +133,16 @@
   background-color: yellow;
 }
 #card0 .back, #card1 .back, #card2 .back, #card3 .back, #card4 .back,
-#card5 .back, #card6 .back, #card7 .back, #card8 .back, #card9 .back {
+#card5 .back, #card6 .back, #card7 .back, #card8 .back, #card9 .back,
+#card10 .back, #card11 .back {
   background: #FFFFFF;
   border: 1px solid #F1F1F1;
   transform: rotateY( -180deg );
 }
 
 #card0.flipped, #card1.flipped,#card2.flipped, #card3.flipped, #card4.flipped,
-#card5.flipped, #card6.flipped,#card7.flipped, #card8.flipped, #card9.flipped {
+#card5.flipped, #card6.flipped,#card7.flipped, #card8.flipped, #card9.flipped,
+#card10.flipped, #card11.flipped {
   transform: rotateY( -180deg );
 }
 
@@ -114,10 +153,33 @@ img{
 
 
 .room{
-  height: 500px;
+  /*height: 50px;*/
 }
 
-/*.cover:hover {
-  height: 380px;
-  transition: height .5s;
-}*/
+select {
+    margin: 50px;
+    border: 1px solid #111;
+    background: white;
+    width: 150px;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    height: 40px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+
+/*=============*/
+
+#my_collection{
+  width: 100%;
+  height: 100vh;
+
+}
+
+
+
+
+
+
+
